# server/src/swagger/swagger.json
@@ -196,6 +196,9 @@
 						"type": "string",
 						"nullable": true
 					},
+					"creatorName": {
+						"type": "string"
+					},
 					"categories": {
 						"items": {
 							"type": "string"
@@ -285,6 +288,9 @@
 						"type": "string"
 					},
 					"description": {
+						"type": "string"
+					},
+					"creatorName": {
 						"type": "string"
 					},
 					"categories": {
@@ -665,6 +671,14 @@
 					{
 						"in": "query",
 						"name": "q",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "recipeBookId",
 						"required": true,
 						"schema": {
 							"type": "string"
